@@ -278,12 +278,10 @@ class sqlrcursor {
 		bool	validInputBind(const char *variable);
 				// Returns true if "variable" was a valid
 				// input bind variable of the query.
-				// Must be called after calling executeQuery()
 			
 		bool	validOutputBind(const char *variable);
 				// Returns true if "variable" was a valid
 				// output bind variable of the query.
-				// Must be called after calling executeQuery()
 
 		bool	executeQuery();
 				// Execute the query that was previously 
