@@ -1,7 +1,7 @@
 /*
  * sqlrelayCmd.c
  * Copyright (c) 2003 Takeshi Taguchi
- * $Id: sqlrelayCmd.C,v 1.23 2007-04-07 04:12:17 mused Exp $
+ * $Id: sqlrelayCmd.C,v 1.24 2007-05-17 03:03:32 mused Exp $
  */
 
 #include <tcl.h>
@@ -94,6 +94,8 @@ void sqlrcurDelete(ClientData data) {
  *   $cur substitutions {{variable value} ...}
  *   $cur inputBinds {{variable value ?precision scale?} ...}
  *   $cur validateBinds
+ *   $cur validInputBind
+ *   $cur validOutputBind
  *   $cur executeQuery
  *   $cur fetchFromBindCursor
  *   $cur getOutputBindString variable
@@ -193,6 +195,8 @@ int sqlrcurObjCmd(ClientData data, Tcl_Interp *interp,
     "substitutions",
     "inputBinds",
     "validateBinds",
+    "validInputBind",
+    "validOutputBind",
     "executeQuery",
     "fetchFromBindCursor",
     "getOutputBindString",
@@ -286,6 +290,8 @@ int sqlrcurObjCmd(ClientData data, Tcl_Interp *interp,
     SQLRCUR_substitutions,
     SQLRCUR_inputBinds,
     SQLRCUR_validateBinds,
+    SQLRCUR_validInputBind,
+    SQLRCUR_validOutputBind,
     SQLRCUR_executeQuery,
     SQLRCUR_fetchFromBindCursor,
     SQLRCUR_getOutputBindString,
@@ -855,6 +861,28 @@ int sqlrcurObjCmd(ClientData data, Tcl_Interp *interp,
 	  return TCL_ERROR;
 	}
 	cur->validateBinds();
+	break;
+      }
+    case SQLRCUR_validInputBind:
+      {
+	Tcl_Obj *result;
+	if (objc != 3) {
+	  Tcl_WrongNumArgs(interp, 2, objv, "variable");
+	  return TCL_ERROR;
+	}
+	result = Tcl_NewBooleanObj(cur->validInputBind(Tcl_GetString(objv[2])));
+	Tcl_SetObjResult(interp, result);
+	break;
+      }
+    case SQLRCUR_validOutputBind:
+      {
+	Tcl_Obj *result;
+	if (objc != 3) {
+	  Tcl_WrongNumArgs(interp, 2, objv, "variable");
+	  return TCL_ERROR;
+	}
+	result = Tcl_NewBooleanObj(cur->validOutputBind(Tcl_GetString(objv[2])));
+	Tcl_SetObjResult(interp, result);
 	break;
       }
     case SQLRCUR_executeQuery:
