@@ -39,6 +39,8 @@
 	applied some of Tim Bunce's DBI patches
 	added pid cleanup to init script similar to patch supplied by
 		Ragnar Rova
+	added validBind() method which will return whether a bind variable is
+		in the query or not
 
 0.38 - implemented mysql_stmt function support in mysql connection
 	fixed mysql_autocommit detection
